# NumericalMethods

./: .gitignore  CMakeLists.txt  gauss.cpp  ldltFactorization.cpp  ldltFactorization.h  main.cpp  main.py  main1.py
CPP/: gauss.cpp  gauss.h  ldltFactorization.cpp  ldltFactorization.h  main.cpp  main.out
CPP/include/gauss/: gauss.cpp  gauss.h
CPP/include/neutone/: neuton.cpp  neuton.h
CPP/src/: const.h  main.cpp
Python/: main.py
